fix(calendar-swipe): Adjust media query to hide previous and next buttons on mobile devices

--- a/src/app/calendar-view/calendar.component.css
+++ b/src/app/calendar-view/calendar.component.css
@@ -57,7 +57,11 @@ ngx-rt {
       order: 4;
     }
 
-    .time-sch-time-container button:nth-of-type(1) {
+    .time-sch-time-container button:nth-of-type(3) {
+      display: none !important;
+    }
+
+    .time-sch-time-container button:nth-of-type(4) {
       display: none !important;
     }
 
@@ -68,12 +72,6 @@ ngx-rt {
 
     .time-sch-period-container {
       order: 3;
-    }
-  }
-
-  @media (max-width: 395px) {
-    .time-sch-time-container button:nth-of-type(2) {
-      display: none !important;
     }
   }
 
